--- a/frontend/src/styles/SidebarGemini.css
+++ b/frontend/src/styles/SidebarGemini.css
@@ -2,7 +2,7 @@
 .sidebar {
   position: fixed;
   top: 0;
-  bottom: 55px;
+  bottom: 40px;
   left: 0;
   width: 240px;
   background-color: #002b5c;
